<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_button">C</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="DivBtn">/</string>
    <string name="MultBtn">*</string>
    <string name="subtractBtn">-</string>
    <string name="SumBtn">+</string>
    <string name="OutputTextView">0</string>
    <string name="dotBtn">.</string>
    <string name="EqualBtn">=</string>
    <string name="headTextView">Choose a theme:</string>
    <string name="radioBtn1">Cool dark style</string>
    <string name="radioBtn2">Light style</string>
    <string name="backBtn">Back</string>

</resources>