<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars"
    android:orientation="vertical"
    android:theme="@style/MyCoolStyle"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headTextView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/radioBtnCoolStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn1" />

        <RadioButton
            android:id="@+id/radioBtnLightStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:text="@string/radioBtn2" />
    </RadioGroup>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>

</LinearLayout>